--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeX</title>
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
+    <link rel="manifest" href="/public/site.webmanifest">
+    <link rel="mask-icon" href="/public/safari-pinned-tab.svg" color="#19073c">
+    <link rel="shortcut icon" href="/public/favicon.ico">
+    <meta name="msapplication-TileColor" content="#020725">
+    <meta name="msapplication-config" content="/public/browserconfig.xml">
+    <meta name="theme-color" content="#020725">
   </head>
 
   <body>
